package com.example.beta;

public class EuidC {

    private String EuidC;

    public EuidC() {

    }

    public EuidC(String EuidC) {

        this.EuidC = EuidC;

    }

    public String getEuidC() {
        return EuidC;
    }

    public void setEuidC(String euidC) {
        EuidC = euidC;
    }
}
