package com.example.beta;

import com.google.firebase.auth.FirebaseAuth;
import com.google.firebase.auth.FirebaseUser;

public class FBref {

    public static FirebaseAuth mAuth=FirebaseAuth.getInstance();
}
